--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -12,8 +12,8 @@
     <color name="sadasd">#f7f7f7</color>
     <color name="aaaaa">#bbbaba</color>
     <color name="toast">#e23f3f3f</color>
-    <color name="cam">#00aeff</color>
+    <color name="cam">#33b5e5</color>
     <color name="RED">#ff4545</color>
-    <color name="GREEN">#2dae5f</color>
+    <color name="GREEN">#2fa35c</color>
 
 </resources>
