--- a/app/src/main/res/layout/activity_main_list_lechkho.xml
+++ b/app/src/main/res/layout/activity_main_list_lechkho.xml
@@ -22,11 +22,10 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:padding="5dp"
-        android:text="Chọn hai nhân viên kiểm kho để Đối chiếu kết quả"
+        android:text="Chọn loại danh sách bạn muốn hiển thị"
         android:textAlignment="center"
         android:textSize="12sp"
-        android:textStyle="italic"
-        tools:text="Chọn loại danh sách bạn muốn hiển thị" />
+        android:textStyle="italic"/>
 
     <LinearLayout
         android:layout_width="match_parent"
