--- a/app/src/main/res/layout/activity_main_scan_qr.xml
+++ b/app/src/main/res/layout/activity_main_scan_qr.xml
@@ -24,54 +24,81 @@
         tools:layout_editor_absoluteX="8dp"
         tools:layout_editor_absoluteY="0dp" />
 
-    <LinearLayout
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp"
+            android:orientation="vertical">
+
+            <TextView
+                android:id="@+id/textView24"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:layout_weight="1"
+                android:text="Chọn chi nhánh đang Kiểm kho:" />
+
+            <Spinner
+                android:id="@+id/spinnerKiemkho"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_weight="1" />
+        </LinearLayout>
+
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_margin="10dp"
+            android:background="@color/cam" />
+
+
+        <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
         android:weightSum="3">
 
-        <TextView
-            android:id="@+id/textView5"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_marginTop="10dp"
-            android:layout_weight="2"
-            android:gravity="center_vertical|center"
-            android:text="Quét mã sản phẩm:"
-            android:textSize="18sp" />
-
-        <LinearLayout
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center_horizontal"
-            android:orientation="horizontal">
-
-            <Button
-                android:id="@+id/btnScan"
-                android:layout_width="65dp"
-                android:layout_height="37dp"
-                android:layout_below="@+id/tv_blog_url"
-                android:layout_centerHorizontal="true"
-                android:layout_marginTop="15dp"
-                android:background="@android:color/holo_orange_light"
-                android:drawableLeft="@drawable/ic_search_black_24dp"
+            <TextView
+                android:id="@+id/textView5"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_marginLeft="10dp"
+                android:layout_weight="2"
                 android:gravity="center_vertical"
-                android:padding="5dp"
-                android:text="Scan"
-                android:textColor="#fff"
-                android:textSize="10sp" />
+                android:text="Quét mã sản phẩm:"
+                android:textSize="14sp" />
+
+            <LinearLayout
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:gravity="center_horizontal"
+                android:orientation="horizontal">
+
+                <Button
+                    android:id="@+id/btnScan"
+                    android:layout_width="65dp"
+                    android:layout_height="37dp"
+                    android:layout_below="@+id/tv_blog_url"
+                    android:layout_centerHorizontal="true"
+                    android:background="@android:color/holo_orange_light"
+                    android:drawableLeft="@drawable/ic_search_black_24dp"
+                    android:gravity="center_vertical"
+                    android:padding="5dp"
+                    android:text="Scan"
+                    android:textColor="#fff"
+                    android:textSize="10sp" />
 
 
-        </LinearLayout>
+            </LinearLayout>
 
     </LinearLayout>
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_margin="10dp"
-        android:background="@color/zxing_custom_viewfinder_mask" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_margin="10dp"
+            android:background="@color/cam" />
 
 
 
@@ -138,11 +165,11 @@
     </LinearLayout>
 
 
-    <TextView
-        android:layout_width="match_parent"
-        android:layout_height="1dp"
-        android:layout_margin="10dp"
-        android:background="@color/zxing_custom_viewfinder_mask" />
+        <TextView
+            android:layout_width="match_parent"
+            android:layout_height="1dp"
+            android:layout_margin="10dp"
+            android:background="@color/cam" />
 
 
     <TextView
